--- a/DnDCharacters/Views/Home/Index.cshtml
+++ b/DnDCharacters/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model List<DnDCharacters.Models.Character>
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -11,20 +12,23 @@
         Web apps with ASP.NET Core</a>.
     </p>
 
-    @foreach (var character in @Model)
+    @if (@Model != null)
     {
-        <div class="card">
-            <div class="card-body">
-                <h4>@character.Name</h4>
-                <ul>
-                    <li>Str @character.Str</li>
-                    <li>Dex @character.Dex</li>
-                    <li>Con @character.Con</li>
-                    <li>Int @character.Int</li>
-                    <li>Wis @character.Wis</li>
-                    <li>Cha @character.Cha</li>
-                </ul>
+        @foreach (var character in @Model)
+        {
+            <div class="card">
+                <div class="card-body">
+                    <h4>@character.Name</h4>
+                    <ul>
+                        <li>Str @character.Str</li>
+                        <li>Dex @character.Dex</li>
+                        <li>Con @character.Con</li>
+                        <li>Int @character.Int</li>
+                        <li>Wis @character.Wis</li>
+                        <li>Cha @character.Cha</li>
+                    </ul>
+                </div>
             </div>
-        </div>
+        }
     }
 </div>
