--- a/DnDCharacters/Views/Characters/Create.cshtml
+++ b/DnDCharacters/Views/Characters/Create.cshtml
@@ -2,8 +2,7 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
-    Layout = "_Layout";
-    ViewBag.Title = "Add Character";
+    ViewData["Title"] = "Add Character";
 }
 
 <div class="container">
@@ -18,37 +17,37 @@
 
                 <div class="form-group">
                     <label asp-for="Str">Strength:</label>
-                    <input asp-for="Str" class="form-control" />
+                    <input asp-for="Str" class="form-control" min="0" max="30" />
                     <span asp-validation-for="Str" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
                     <label asp-for="Dex">Dexterity:</label>
-                    <input asp-for="Dex" class="form-control" />
+                    <input asp-for="Dex" class="form-control" min="0" max="30" />
                     <span asp-validation-for="Dex" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
                     <label asp-for="Con">Constitution:</label>
-                    <input asp-for="Con" class="form-control" />
+                    <input asp-for="Con" class="form-control" min="0" max="30" />
                     <span asp-validation-for="Con" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
                     <label asp-for="Int">Intelligence:</label>
-                    <input asp-for="Int" class="form-control" />
+                    <input asp-for="Int" class="form-control" min="0" max="30" />
                     <span asp-validation-for="Int" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
                     <label asp-for="Wis">Wisdom:</label>
-                    <input asp-for="Wis" class="form-control" />
+                    <input asp-for="Wis" class="form-control" min="0" max="30" />
                     <span asp-validation-for="Wis" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
                     <label asp-for="Cha">Charisma:</label>
-                    <input asp-for="Cha" class="form-control" />
+                    <input asp-for="Cha" class="form-control" min="0" max="30" />
                     <span asp-validation-for="Cha" class="text-danger"></span>
                 </div>
 
