Updated appsettings.json and Program.cs to use the MySQL database. Runing into error on line 15 in Program.cs.

--- a/DnDCharacters/Views/Home/Index.cshtml
+++ b/DnDCharacters/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     {
         @foreach (var character in @Model)
         {
-            <div class="card">
+            <div class="card" style="width:400px">
                 <div class="card-body">
                     <h4>@character.Name</h4>
                     <ul>
